# P13_Open_C

./: .coveragerc  .dockerignore  .flake8  .gitignore  .readthedocs.yaml  Dockerfile  README.md  migrate_and_run.sh  oc-lettings-site.sqlite3  poetry.toml  pyproject.toml  setup.cfg
.circleci/: config.yml
docs/: conf.py  deployment_process.rst  programming_interface.rst  user_guide.rst
docs/_build/doctrees/: data_base.doctree  deployment_process.doctree  description.doctree  environment.pickle  function.doctree  index.doctree  install.doctree  programming_interface.doctree  starting_guide.doctree  techno_to_use.doctree  user_guide.doctree
docs/_build/html/: .buildinfo  data_base.html  deployment_process.html  description.html  function.html  genindex.html  index.html  install.html  objects.inv  programming_interface.html  py-modindex.html  search.html  searchindex.js  starting_guide.html  techno_to_use.html  user_guide.html
docs/_build/html/_sources/: data_base.rst.txt  description.rst.txt  function.rst.txt  index.rst.txt  install.rst.txt  starting_guide.rst.txt  techno_to_use.rst.txt
docs/_build/html/_static/: style.css
lettings/: admin.py  models.py  tests.py  urls.py  views.py
lettings/migrations/: 0001_initial.py  0002_alter_address_options.py
oc_lettings_site/: settings.py  tests.py  urls.py  views.py
oc_lettings_site/migrations/: 0002_remove_letting_address_delete_address_delete_letting.py  0003_delete_profile.py
profiles/: models.py  tests.py  urls.py  views.py
profiles/migrations/: 0001_initial.py
templates/: 404.html  500.html  index.html
