[tool.poetry]
name = "p13-oc-lettings"
version = "0.1.0"
description = ""
authors = ["LGD-P <nplgdjp@gmx.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.6"
django = "^5.0"
python-dotenv = "^1.0.0"
sentry-sdk = {version = "^1.39.1", extras = ["django"]}
whitenoise = "^6.6.0"
zopfli = "^0.2.3"
gunicorn = "^21.2.0"
sphinx = "^7.2.6"
sphinx-rtd-theme = "^2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-django = "^4.7.0"
flake8 = "^6.1.0"
flake8-html = "^0.4.3"
pytest-cov = "^4.1.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
